code/kubes/health/k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  namespace: health
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - health.xinutec.org
      secretName: health-tls
  rules:
    - host: health.xinutec.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: health-auth
                port:
                  number: 80
